# Voice-Agent-using-Nvidia-Riva-NIM-Pipecat

./: README.md  Readme.md  mcp_with_nim_webapp.py  pyproject.toml
webapp/: app.js  index.html  styles.css
